HelloUltraviolet/Fixtures/RejectedSource/Statements/StatementDiagnosticsSupplement/Expected.uv
//! Expected diagnostic metadata for the StatementDiagnosticsSupplement rejected-source specimen.

expectedDiagnostic("E-SEM-3131", "diag.18.StatementDiagnosticsSupplement")
